treat parameter as constant in ORDER BY check of fields in SELECT list(Bug #3686)